<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/skin_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="148dp">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_launcher_green_96dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center_horizontal"
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    android:layout_marginBottom="16dp"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin_theme"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutSoftwareTitle"
                android:gravity="center_horizontal"
                android:textColor="@color/skin_title"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutSoftwareContent"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/skin_textColor"
                android:lineSpacingMultiplier="1.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutTechTitle"
                android:textStyle="italic"
                android:gravity="center_horizontal"
                android:textColor="@color/skin_title"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutTechContent"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/skin_textColor"
                android:lineSpacingMultiplier="1.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutLowTitle"
                android:textStyle="italic"
                android:gravity="center_horizontal"
                android:textColor="@color/skin_title"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutLowContent"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/skin_textColor"
                android:lineSpacingMultiplier="1.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactUsTitle"
                android:gravity="center_horizontal"
                android:textColor="@color/skin_title"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginBottom="2dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="2dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone_green_20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phnoe"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@color/skin_textColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_green_20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@color/skin_textColor"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>