<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_margin="0dp"
        app:elevation="0dp">
        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skin_theme"
            app:tabIndicatorColor="@android:color/white"
            app:tabGravity="fill"
            android:id="@+id/tab_layout" />
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_pager"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|end"
        fab:fab_addButtonColorNormal="@color/colorPrimary"
        fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
        fab:fab_addButtonPlusIconColor="#ffffff"
        fab:fab_addButtonSize="normal"
        android:id="@+id/fab_menu_root"
        fab:fab_labelStyle="@style/menu_labels_style">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/fab_menu_intheater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_coming_soon_white_24dp"
            fab:fab_colorNormal="@color/fab_in_theater_normal"
            fab:fab_colorPressed="@color/fab_in_theater_press"
            app:elevation="4dp"
            fab:fab_size="mini"
            fab:fab_title="正在热映" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/fab_menu_comingsoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/fab_coming_soon_normal"
            fab:fab_icon="@drawable/ic_in_threater_white_24dp"
            fab:fab_colorPressed="@color/fab_coming_soon_press"
            app:elevation="4dp"
            fab:fab_size="mini"
            fab:fab_title="即将上映" />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/event_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_music_white_24dp"
            fab:fab_colorNormal="@color/fab_music_normal"
            fab:fab_colorPressed="@color/fab_music_press"
            fab:fab_size="mini"
            fab:fab_title="@string/music" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/event_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/fab_stage_normal"
            fab:fab_icon="@drawable/ic_seat_white_24dp"
            fab:fab_colorPressed="@color/fab_stage_press"
            fab:fab_size="mini"
            fab:fab_title="@string/stage" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/event_broaden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/fab_broaden_normal"
            fab:fab_icon="@drawable/ic_visibility_white_24dp"
            fab:fab_colorPressed="@color/fab_broaden_press"
            fab:fab_size="mini"
            fab:fab_title="@string/broaden" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/event_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/fab_party_normal"
            fab:fab_icon="@drawable/ic_group_white_24dp"
            fab:fab_colorPressed="@color/fab_party_press"
            fab:fab_size="mini"
            fab:fab_title="@string/party" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/event_outdoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/fab_outdoors_normal"
            fab:fab_icon="@drawable/ic_outdoors_white_24dp"
            fab:fab_colorPressed="@color/fab_outdoors_press"
            fab:fab_size="mini"
            fab:fab_title="@string/outdoors" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:visibility="gone"
            android:id="@+id/event_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/fab_others_normal"
            fab:fab_icon="@drawable/ic_more_vert_white_24dp"
            fab:fab_colorPressed="@color/fab_others_press"
            fab:fab_size="mini"
            fab:fab_title="@string/others" />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>