<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skin_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/loading"
        android:gravity="center"
        android:textSize="26dp"
        android:background="@color/skin_background"
        android:textColor="@color/skin_title"
        android:text="@string/loading"
        android:visibility="visible"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/result"
        android:visibility="invisible"
        android:background="@color/skin_list_background">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/skin_background"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/skin_title"
                        android:layout_marginLeft="8dp"
                        android:text="@string/movie_describe"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/skin_theme"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/describe"
                        android:textSize="15sp"
                        android:textColor="@color/skin_textColor"
                        android:lineSpacingMultiplier="1.2"
                        android:layout_marginBottom="18dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/skin_title"
                        android:layout_marginLeft="8dp"
                        android:text="@string/movie_director"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/skin_theme"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="2dp"
                        android:layout_marginBottom="20dp">
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="100dp"
                            android:id="@+id/ivdirector"
                            android:layout_marginRight="4dp"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/skin_title"
                            android:id="@+id/tvdirector"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/skin_title"
                        android:text="@string/movie_casts"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/skin_theme"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginRight="18dp"
                            android:layout_marginLeft="2dp"
                            android:gravity="center_horizontal">
                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="100dp"
                                android:id="@+id/ivcast1"
                                android:scaleType="centerCrop"
                                android:layout_marginRight="4dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="@color/skin_title"
                                android:id="@+id/tvcast1"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal">
                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="100dp"
                                android:id="@+id/ivcast2"
                                android:scaleType="centerCrop" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="@color/skin_title"
                                android:id="@+id/tvcast2"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>